--- a/src/components/pages/Blogs.css
+++ b/src/components/pages/Blogs.css
@@ -1,11 +1,15 @@
-.App {
+/*  blog starts  */
+
+.blog-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     margin: 20px;
 }
 
-.App .card {
+/*  card starts  */
+
+.blog-container .card {
     width: 300px;
     height: 450px;
     background-color: rgb(22, 22, 22);
@@ -48,3 +52,6 @@
 .btn:hover {
     transform: scale(1.1);
 }
+
+/*  card ends  */
+/*  blog ends  */
