--- a/src/components/pages/Features.css
+++ b/src/components/pages/Features.css
@@ -1,3 +1,5 @@
+/*  Gym Features starts  */
+
 .feature-title h1 {
     font-size: 3rem;
     padding: .5rem;
@@ -74,3 +76,5 @@
     color: #aaa;
     padding: 1rem 0;
 }
+
+/*  Gym Features ends  */
