--- a/src/components/header.css
+++ b/src/components/header.css
@@ -53,7 +53,7 @@ body {
     display: none;
 }
 
-/*  header media queries end  */
+/*  header media queries starts  */
 
 /*  for 991 pixel screen  */
 @media (max-width: 991px) {
