--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -51,13 +51,6 @@ html {
     align-items: center;
 }
 
-/* #menu-btn {
-    font-size: 3rem;
-    color: #ffffff;
-    cursor: pointer;
-    display: none;
-} */
-
 /*  swiper starts  */
 
 .swiper-slide .content span {
@@ -77,7 +70,7 @@ html {
 }
 
 .btn {
-    margin-top: 1rem;
+    margin: 1rem;
     display: inline-block;
     padding: 1rem 2.8rem;
     padding-right: 3rem;
@@ -95,6 +88,7 @@ html {
     width: 1.5rem;
     background-color: #fff;
     border-radius: 0;
+    z-index: 1;
 }
 
 &.swiper-pagination-bullet-active {
@@ -102,62 +96,6 @@ html {
 } */
 
 /*  swiper ends  */
-
-@media (max-width: 991px) {
-
-    html {
-        font-size: 55%;
-    }
-
-    section {
-        padding: 3rem 2rem;
-    }
-
-    .home .slide {
-        padding: 2rem 5%;
-    }
-
-    .home .slide .content {
-        width: 50rem;
-    }
-
-    h3 {
-        font-size: 4rem;
-    }
-
-}
-
-@media (max-width: 768px) {
-
-    /* #menu-btn {
-      display: inline-block;
-      height: 50px;
-      width: 50px;
-      color: #fff;
-    } */
-
-    .nav-container .navbar {
-        position: absolute;
-        top: 99%;
-        left: 0;
-        right: 0;
-        border-color: #000;
-    }
-
-    .nav-container .navbar a {
-        display: block;
-        font-size: 2rem;
-    }
-
-}
-
-@media (max-width: 450px) {
-
-    html {
-        font-size: 55%;
-    }
-
-}
 
 /*  latest work starts  */
 
@@ -252,6 +190,8 @@ html {
     background: linear-gradient(130deg, rgb(22, 22, 22) 93%, transparent 90%);
     padding: 20px;
     border-radius: 5px;
+    width: 250px;
+    height: 130px;
 }
 
 .test-content div h2 {
@@ -262,7 +202,6 @@ html {
 .test-content div p,
 article p {
     font-size: 1.5rem;
-    padding-top: 1rem;
     line-height: 1.8;
 }
 
@@ -270,13 +209,12 @@ article p {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 1.5rem;
     gap: 1rem;
 }
 
 .test-content article .test-img img {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
 }
 
@@ -316,12 +254,19 @@ form {
     color: #ff0000;
 }
 
-.box form input,
-textarea {
+.box form input {
     margin-top: 1rem;
     padding: 1.2rem 3.5rem;
     border-radius: 5px;
     background-color: rgb(22, 22, 22);
+}
+
+.box form textarea {
+    margin-top: 1rem;
+    padding: 1.2rem 3.5rem;
+    border-radius: 5px;
+    background-color: rgb(22, 22, 22);
+    text-align: start;
 }
 
 .box form .btn {
@@ -335,3 +280,203 @@ textarea {
 }
 
 /*  footer ends  */
+
+/*  home  media query starts  */
+
+@media (max-width: 991px) {
+
+    html {
+        font-size: 55%;
+    }
+
+    section {
+        padding: 3rem 2rem;
+    }
+
+    .home .slide {
+        padding: 2rem 5%;
+    }
+
+    .home .slide .content {
+        width: 50rem;
+    }
+
+    h3 {
+        font-size: 4rem;
+    }
+
+}
+
+@media (max-width: 768px) {
+
+    .swiper-wrapper .slide a {
+        margin-left: 1rem;
+    }
+
+    .home .fitness-workout-container h1 {
+        padding: .8rem;
+        width: 250px;
+    }
+
+    .fitness-workout-container .workout-types {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        margin-left: 2rem;
+    }
+
+    .workout-types .workout-card {
+        height: 320px;
+        width: 220px;
+        margin-left: -2rem;
+    }
+
+    .workout-types .workout-card img {
+        width: 220px;
+        height: 130px;
+    }
+
+    .workout-types .workout-card a {
+        display: block;
+        width: 130px;
+        margin-left: 6rem;
+    }
+
+    .home .test-container h1 {
+        padding: .8rem;
+    }
+
+    .test-container .test-content {
+        display: flex;
+        flex-direction: column;
+        gap: 5rem;
+    }
+
+    .test-container .test-content div a {
+        margin-left: .1rem;
+    }
+
+    .test-container .test-content article {
+        width: 250px;
+        height: 130px;
+        margin-bottom: -3rem;
+    }
+
+    .test-container .test-content article .test-img img {
+        width: 30px;
+        height: 30px;
+        margin-left: -6rem;
+    }
+
+    .test-container .test-content article .test-img h3 {
+        font-size: 1.8rem;
+    }
+
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        margin-top: 10rem;
+    }
+
+    .footer-container .box {
+        margin-top: -10rem;
+        text-align: center;
+    }
+
+    .footer-container .box textarea {
+        width: 220px;
+    }
+
+}
+
+@media (max-width: 450px) {
+
+    html {
+        font-size: 55%;
+    }
+
+    .swiper-wrapper .slide a {
+        margin-left: 1rem;
+    }
+
+    .home .fitness-workout-container h1 {
+        padding: .8rem;
+        width: 250px;
+        margin-bottom: 10rem;
+    }
+
+    .fitness-workout-container .workout-types {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .workout-types .workout-card {
+        margin-top: -5rem;
+        height: 310px;
+    }
+
+    .workout-types .workout-card img {
+        width: 220px;
+        height: 150px;
+    }
+
+    .workout-types .workout-card h2 {
+        margin-top: -1.5rem;
+    }
+
+    .workout-types .workout-card a {
+        display: block;
+        width: 120px;
+        margin-left: 5.8rem;
+        font-size: 1.2rem;
+    }
+
+    .home .test-container h1 {
+        padding: .8rem;
+    }
+
+    .test-container .test-content {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .test-container .test-content div a {
+        margin-left: .1rem;
+    }
+
+    .test-container .test-content article {
+        width: 250px;
+        height: 130px;
+        margin-bottom: -3rem;
+    }
+
+    .test-container .test-content article .test-img img {
+        width: 30px;
+        height: 30px;
+        margin-left: -6rem;
+    }
+
+    .test-container .test-content article .test-img h3 {
+        font-size: 1.8rem;
+    }
+
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        margin-top: 10rem;
+    }
+
+    .footer-container .box {
+        margin-top: -10rem;
+        text-align: center;
+    }
+
+    .footer-container .box textarea {
+        width: 220px;
+    }
+}
+
+/*  home media query ends  */
