--- a/src/components/header.css
+++ b/src/components/header.css
@@ -2,11 +2,12 @@ body {
     background-color: black;
 }
 
-.nav-container {
+/* .nav-container {
     padding: 5rem 9%;
-}
+} */
 
 .nav-container {
+    width: 100vw;
     display: flex;
     position: fixed;
     top: 0;
@@ -14,8 +15,9 @@ body {
     right: 0;
     align-items: center;
     justify-content: space-between;
-    padding: 0 9%;
+    padding: 1rem 5rem;
     background: black;
+    z-index: 50;
 }
 
 .nav-container .logo {
@@ -30,7 +32,6 @@ body {
 
 .nav-container .navbars ul {
     display: flex;
-    padding: 1rem;
     font-size: 1.7rem;
     list-style: none;
     gap: 1rem;
@@ -64,6 +65,20 @@ body {
 
 /*  for than 768 pixel screen  */
 @media (max-width: 768px) {
+
+    /* .nav-container .navbar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        border-color: #000;
+    } */
+
+    .nav-container .navbar a {
+        display: block;
+        font-size: 2rem;
+    }
+
     .header a {
         padding-bottom: .2rem;
         margin-left: -3rem;
@@ -71,6 +86,7 @@ body {
 
     .nav-container .navbars ul {
         padding-left: 5rem;
+        margin-left: -10rem;
     }
 
     .nav-container .navbars ul a {
