--- a/src/components/pages/Pricing.css
+++ b/src/components/pages/Pricing.css
@@ -46,4 +46,49 @@
     padding-top: 2rem;
 }
 
+/*  pricing media query starts  */
+
+@media (max-width: 768px) {
+
+    .price-title h1 {
+        width: 220px;
+    }
+
+    .price-title .price-plans {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+    }
+
+    .price-title .plans-info:nth-of-type(2) {
+        width: 250px;
+        height: 380px;
+        background: linear-gradient(130deg, rgb(22, 22, 22), 94%, transparent 90%);
+    }
+
+    .price-title .plans-info:nth-of-type(2) h1 {
+        margin-left: -2rem;
+    }
+}
+
+@media (max-width: 450px) {
+    .price-title .price-plans {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .price-title .plans-info {
+        margin-top: 0;
+    }
+
+    .price-title .plans-info:nth-of-type(2) {
+        margin-top: 0;
+    }
+}
+
+/*  pricing media query ends  */
+
 /*  pricing plan ends */
