--- a/src/components/pages/Pricing.css
+++ b/src/components/pages/Pricing.css
@@ -68,16 +68,21 @@
     }
 
     .price-title .plans-info:nth-of-type(2) h1 {
-        margin-left: -2rem;
+        margin-left: 2rem;
     }
 }
 
 @media (max-width: 450px) {
+    .price-title h1 {
+        width: 180px;
+    }
+
     .price-title .price-plans {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin-top: 2rem;
     }
 
     .price-title .plans-info {
@@ -86,6 +91,15 @@
 
     .price-title .plans-info:nth-of-type(2) {
         margin-top: 0;
+        height: 330px;
+    }
+
+    .price-title .plans-info:nth-of-type(2) h1 {
+        padding-left: 10rem;
+    }
+
+    .price-title .plans-info p {
+        line-height: normal;
     }
 }
 
