--- a/src/components/pages/Blogs.css
+++ b/src/components/pages/Blogs.css
@@ -107,7 +107,10 @@
 /*  less than 450px screen*/
 @media (max-width: 450px) {
     .title h1 {
-        width: 120px;
+        font-size: 2.5rem;
+        width: 100px;
+        height: 40px;
+        margin-top: 12rem;
     }
 
     .blog-container {
@@ -126,7 +129,7 @@
     }
 
     .more-btn {
-        margin: 1rem 5.6rem;
+        margin: 2rem 5.6rem;
     }
 }
 
