--- a/src/components/pages/Contact.css
+++ b/src/components/pages/Contact.css
@@ -79,6 +79,13 @@ textarea {
 }
 
 @media (max-width: 450px) {
+    .contact-container h1 {
+        width: 150px;
+        height: 40px;
+        font-size: 2.5rem;
+        margin-top: 12rem;
+    }
+
     .contact-form {
         display: flex;
         flex-direction: column;
