--- a/src/components/pages/Features.css
+++ b/src/components/pages/Features.css
@@ -102,7 +102,10 @@
 @media (max-width: 450px) {
 
     .feature-title h1 {
-        width: 200px;
+        width: 180px;
+        height: 40px;
+        font-size: 2.5rem;
+        margin-top: 12rem;
     }
 
     .feature-title .box-container {
