--- a/src/components/pages/Pricing.css
+++ b/src/components/pages/Pricing.css
@@ -75,6 +75,9 @@
 @media (max-width: 450px) {
     .price-title h1 {
         width: 180px;
+        height: 40px;
+        font-size: 2.5rem;
+        margin-top: 12rem;
     }
 
     .price-title .price-plans {
@@ -83,6 +86,7 @@
         justify-content: center;
         align-items: center;
         margin-top: 2rem;
+        margin-bottom: 2rem;
     }
 
     .price-title .plans-info {
@@ -95,7 +99,7 @@
     }
 
     .price-title .plans-info:nth-of-type(2) h1 {
-        padding-left: 10rem;
+        padding-left: 5rem;
     }
 
     .price-title .plans-info p {
